--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    image: yolo-client:1.1.0
+    image: sgumbe/yolo-latest:1.1.0
     ports:
       - "3000:3000"
     volumes:
@@ -21,7 +21,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    image: yolo-backend:1.2.0
+    image: sgumbe/yolo-latest:1.2.0
     ports:
       - "5000:5000"
     volumes:
