--- a/backend/backend-service.yaml
+++ b/backend/backend-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: backend
-  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 5000
