added configmaps to both deployment files

--- a/backend/backend-deployment.yaml
+++ b/backend/backend-deployment.yaml
@@ -16,11 +16,11 @@ spec:
         - name: backend
           image: sgumbe/yolo-latest:1.2.0
           env:
-            - name: MONGO_URI
+            - name: NODE_ENV
               valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: connection-string
+                configMapKeyRef:
+                  name: backend-config-map
+                  key: NODE_ENV
           ports:
             - containerPort: 5000
 ---
