--- a/client/client-deployment.yaml
+++ b/client/client-deployment.yaml
@@ -17,3 +17,6 @@ spec:
           image: sgumbe/yolo-latest:1.1.0
           ports:
             - containerPort: 3000
+          envFrom:
+            - configMapRef:
+                name: client-config-map
