--- a/client/client-deployment.yaml
+++ b/client/client-deployment.yaml
@@ -20,3 +20,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: client-config-map
+          volumeMounts:
+            - name: client-data
+              mountPath: /data
+      volumes:
+        - name: client-data
+          persistentVolumeClaim:
+            claimName: client-pvc
